🐛 Fix z-index of "header", "forumBody:title"

--- a/src/component/Body/Forum/ForumBody.css
+++ b/src/component/Body/Forum/ForumBody.css
@@ -23,6 +23,7 @@
     background-color: violet;
     position: sticky;
     top: 48px;
+    z-index: 10;
 }
 
 .forumBody__fillBlock {
