--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -3,6 +3,7 @@
   position: fixed;
   width: 100%;
   background-color: #0e6aa6;
+  z-index: 10;
 }
 
 .header__container {
